force-app/main/default/objects/Account/fields/Anotacion__c.field-meta.xml
<CustomField>
    <fullName>Anotacion__c</fullName>
    <label>Anotación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>