force-app/main/default/objects/Account/fields/Campo_A__c.field-meta.xml
<CustomField>
    <fullName>Campo_A__c</fullName>
    <label>Campo A</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>