force-app/main/default/objects/Account/fields/Campo_B__c.field-meta.xml
<CustomField>
    <fullName>Campo_B__c</fullName>
    <label>Campo B</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>