force-app/main/default/objects/Account/fields/Campo_D__c.field-meta.xml
<CustomField>
    <fullName>Campo_D__c</fullName>
    <formula>Campo_A__c *  Campo_B__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campo D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>