force-app/main/default/objects/Account/fields/CheckboxPOC__c.field-meta.xml
<CustomField>
    <fullName>CheckboxPOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckboxPOC</label>
    <type>Checkbox</type>
</CustomField>