force-app/main/default/objects/Account/fields/CheckboxUserBase__c.field-meta.xml
<CustomField>
    <fullName>CheckboxUserBase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckboxUserBase</label>
    <type>Checkbox</type>
</CustomField>