force-app/main/default/objects/Account/fields/Mensaje_desde_Flow__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_desde_Flow__c</fullName>
    <label>Mensaje desde Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>