force-app/main/default/objects/Account/fields/NumberBaseUser__c.field-meta.xml
<CustomField>
    <fullName>NumberBaseUser__c</fullName>
    <label>NumberBaseUser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>